# gif_read

./: CMakeLists.txt  README.md  main.cpp
EasyGifReader/: EasyGifReader.cpp  EasyGifReader.h
EasyGifReader/giflib/5.2.1/: INSTALL_RECEIPT.json
EasyGifReader/giflib/5.2.1/lib/: libgif.7.2.0.dylib
